--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="error_camera_permission">Camera permission is required</string>
     <string name="error_location_permission">Location permission is required</string>
     <string name="error_storage_permission">Storage permission is required</string>
+    <string name="cancel">Cancel</string>
     
     <!-- Projects -->
     <string name="new_project">New Project</string>
@@ -23,11 +24,20 @@
     <!-- Photos -->
     <string name="add_comment">Add Comment</string>
     <string name="add_location">Add Location</string>
+    <string name="view_location">View Location</string>
     <string name="add_cost">Add Cost</string>
+    <string name="cost">Cost</string>
     <string name="rating">Rating</string>
     <string name="no_photos">No photos yet</string>
     <string name="photo_thumbnail">Photo thumbnail</string>
     <string name="location_indicator">Location indicator</string>
+    <string name="photo_detail">Photo detail</string>
+    <string name="share_photo">Share photo</string>
+    <string name="delete_photo">Delete photo</string>
+    <string name="delete_photo_confirmation">Are you sure you want to delete this photo? This action cannot be undone.</string>
+    <string name="delete">Delete</string>
+    <string name="observations">Observations</string>
+    <string name="taken_on">Taken on %1$s</string>
 
     <!-- Authentication -->
     <string name="sign_in_with_google">Sign in with Google</string>
