--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,16 @@
     <string name="no_projects">No projects yet</string>
     <string name="project_cover_image">Project cover image</string>
     <string name="add_cover_image">Add Cover Image</string>
+    <string name="change_cover_image">Change Cover Image</string>
+    <string name="save">Save</string>
+    <string name="error_project_name_required">Project name is required</string>
+    <string name="error_creating_project">Error creating project</string>
+    <string name="error_updating_project">Error updating project</string>
+    <string name="project_created">Project created successfully</string>
+    <string name="project_updated">Project updated successfully</string>
+    <string name="error_loading_project">Error loading project</string>
+    <string name="project_cover_image">Project cover image</string>
+    <string name="add_cover_image">Add Cover Image</string>
     <string name="save">Save</string>
     <string name="error_project_name_required">Project name is required</string>
     <string name="error_creating_project">Error creating project</string>
