Added project detail implementation:
1. UI Components:
   - ProjectDetailFragment with collapsing toolbar
   - Cover image with parallax effect and scrim
   - Project description card
   - Photo grid with 3 columns
   - FAB for adding photos
   - Menu actions (share, edit, delete)

2. Features:
   - Display project details and photos
   - Share project functionality
   - Edit project navigation
   - Delete project with confirmation
   - Navigate to photo detail
   - Navigate to camera for new photos
   - Empty state for no photos

3. Architecture:
   - ProjectDetailViewModel for state management
   - SavedStateHandle for project ID
   - State handling for loading/success/deleted/shared/error
   - Integration with photos repository

4. Resources:
   - Layout for project detail screen
   - Gradient scrim drawable
   - Icons (back, edit)
   - Menu resources
   - Additional string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="project_created">Project created successfully</string>
     <string name="project_updated">Project updated successfully</string>
     <string name="error_loading_project">Error loading project</string>
+    <string name="share_project">Share Project</string>
+    <string name="photos">Photos</string>
+    <string name="project_shared">Project shared successfully</string>
     <string name="project_cover_image">Project cover image</string>
     <string name="add_cover_image">Add Cover Image</string>
     <string name="save">Save</string>
