--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_camera">Camera</string>
     <string name="title_photos">Photos</string>
     <string name="title_settings">Settings</string>
+    <string name="title_project_detail">Project Details</string>
     
     <!-- Common -->
     <string name="error_camera_permission">Camera permission is required</string>
